--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -21,11 +21,11 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.36.0
+anthropic==0.39.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
-anyio==4.6.0
+anyio==4.6.2.post1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -46,10 +46,13 @@ asgiref==3.8.1
     # via
     #   -r requirements.txt
     #   django
+    #   django-allauth
 astroid==3.3.5
     # via pylint
 asttokens==2.4.1
-    # via stack-data
+    # via
+    #   icecream
+    #   stack-data
 attrs==24.2.0
     # via
     #   -r requirements.txt
@@ -66,7 +69,7 @@ beautifulsoup4==4.12.3
     #   -r requirements.txt
     #   deep-translator
     #   nbconvert
-bleach==6.1.0
+bleach==6.2.0
     # via nbconvert
 blis==0.7.11
     # via
@@ -74,7 +77,7 @@ blis==0.7.11
     #   thinc
 bracex==2.5.post1
     # via wcmatch
-cached-property==1.5.2
+cached-property==2.0.1
     # via
     #   -r requirements.txt
     #   genanki
@@ -119,13 +122,14 @@ click==8.1.7
     #   mkdocstrings
     #   nltk
     #   typer
-cloudpathlib==0.19.0
+cloudpathlib==0.20.0
     # via
     #   -r requirements.txt
     #   weasel
 colorama==0.4.6
     # via
     #   griffe
+    #   icecream
     #   mkdocs-material
 comm==0.2.2
     # via ipykernel
@@ -134,13 +138,13 @@ confection==0.1.5
     #   -r requirements.txt
     #   thinc
     #   weasel
-coverage==7.6.2
+coverage==7.6.4
     # via
     #   coveralls
     #   pytest-cov
 coveralls==4.0.1
     # via -r requirements.dev.in
-cryptography==43.0.1
+cryptography==43.0.3
     # via
     #   -r requirements.txt
     #   pyopenssl
@@ -154,7 +158,7 @@ dataclasses-json==0.6.7
     # via
     #   -r requirements.txt
     #   langchain-community
-debugpy==1.8.7
+debugpy==1.8.8
     # via ipykernel
 decorator==5.1.1
     # via ipython
@@ -174,13 +178,13 @@ distro==1.9.0
     #   -r requirements.txt
     #   anthropic
     #   openai
-django==5.1.2
+django==5.1.3
     # via
     #   -r requirements.txt
     #   django-allauth
     #   django-debug-toolbar
     #   django-extensions
-django-allauth==65.0.2
+django-allauth==65.2.0
     # via -r requirements.txt
 django-debug-toolbar==4.4.6
     # via -r requirements.dev.in
@@ -193,8 +197,10 @@ docopt==0.6.2
 ebooklib==0.18
     # via -r requirements.txt
 executing==2.1.0
-    # via stack-data
-faker==30.3.0
+    # via
+    #   icecream
+    #   stack-data
+faker==30.8.2
     # via -r requirements.dev.in
 fastjsonschema==2.20.0
     # via nbformat
@@ -207,16 +213,16 @@ filelock==3.16.1
     #   virtualenv
 fqdn==1.5.1
     # via jsonschema
-frozendict==2.4.5
+frozendict==2.4.6
     # via
     #   -r requirements.txt
     #   genanki
-frozenlist==1.4.1
+frozenlist==1.5.0
     # via
     #   -r requirements.txt
     #   aiohttp
     #   aiosignal
-fsspec==2024.9.0
+fsspec==2024.10.0
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -228,17 +234,17 @@ google-ai-generativelanguage==0.6.10
     # via
     #   -r requirements.txt
     #   google-generativeai
-google-api-core==2.21.0
+google-api-core==2.22.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.149.0
+google-api-python-client==2.151.0
     # via
     #   -r requirements.txt
     #   google-generativeai
-google-auth==2.35.0
+google-auth==2.36.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -259,14 +265,14 @@ googleapis-common-protos==1.65.0
     #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
-griffe==1.4.1
+griffe==1.5.1
     # via mkdocstrings-python
-grpcio==1.66.2
+grpcio==1.67.1
     # via
     #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.66.2
+grpcio-status==1.67.1
     # via
     #   -r requirements.txt
     #   google-api-core
@@ -295,12 +301,15 @@ httpx==0.27.2
 httpx-sse==0.4.0
     # via
     #   -r requirements.txt
+    #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.25.2
+huggingface-hub==0.26.2
     # via
     #   -r requirements.txt
     #   tokenizers
-identify==2.6.1
+icecream==2.1.3
+    # via -r requirements.dev.in
+identify==2.6.2
     # via pre-commit
 idna==3.10
     # via
@@ -344,7 +353,7 @@ jinja2==3.1.4
     #   nbconvert
     #   notebook
     #   spacy
-jiter==0.6.1
+jiter==0.7.0
     # via
     #   -r requirements.txt
     #   anthropic
@@ -397,15 +406,15 @@ jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab-pygments==0.3.0
     # via nbconvert
-langchain==0.3.3
+langchain==0.3.7
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.2.3
+langchain-anthropic==0.2.4
     # via -r requirements.txt
-langchain-community==0.3.2
+langchain-community==0.3.5
     # via -r requirements.txt
-langchain-core==0.3.10
+langchain-core==0.3.15
     # via
     #   -r requirements.txt
     #   langchain
@@ -415,13 +424,13 @@ langchain-core==0.3.10
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.1
+langchain-google-genai==2.0.4
     # via -r requirements.txt
-langchain-mistralai==0.2.0
+langchain-mistralai==0.2.1
     # via -r requirements.txt
-langchain-openai==0.2.2
+langchain-openai==0.2.6
     # via -r requirements.txt
-langchain-text-splitters==0.3.0
+langchain-text-splitters==0.3.2
     # via
     #   -r requirements.txt
     #   langchain
@@ -429,7 +438,7 @@ langcodes==3.4.1
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.1.134
+langsmith==0.1.142
     # via
     #   -r requirements.txt
     #   langchain
@@ -443,7 +452,7 @@ lxml==5.3.0
     # via
     #   -r requirements.txt
     #   ebooklib
-marisa-trie==1.2.0
+marisa-trie==1.2.1
     # via
     #   -r requirements.txt
     #   language-data
@@ -458,7 +467,7 @@ markdown-it-py==3.0.0
     # via
     #   -r requirements.txt
     #   rich
-markupsafe==3.0.1
+markupsafe==3.0.2
     # via
     #   -r requirements.txt
     #   jinja2
@@ -467,7 +476,7 @@ markupsafe==3.0.1
     #   mkdocstrings
     #   nbconvert
     #   werkzeug
-marshmallow==3.22.0
+marshmallow==3.23.1
     # via
     #   -r requirements.txt
     #   dataclasses-json
@@ -501,15 +510,15 @@ mkdocs-awesome-pages-plugin==2.9.3
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.5.40
+mkdocs-material==9.5.44
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-mkdocstrings==0.26.1
+mkdocstrings==0.27.0
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.11.1
+mkdocstrings-python==1.12.2
     # via mkdocstrings
 multidict==6.1.0
     # via
@@ -522,7 +531,7 @@ murmurhash==1.0.10
     #   preshed
     #   spacy
     #   thinc
-mypy==1.11.2
+mypy==1.13.0
     # via -r requirements.dev.in
 mypy-extensions==1.0.0
     # via
@@ -569,11 +578,11 @@ numpy==1.26.4
     #   thinc
 ollama==0.3.3
     # via -r requirements.txt
-openai==1.51.2
+openai==1.54.3
     # via
     #   -r requirements.txt
     #   langchain-openai
-orjson==3.10.7
+orjson==3.10.11
     # via
     #   -r requirements.txt
     #   langsmith
@@ -581,7 +590,7 @@ outcome==1.3.0.post0
     # via trio
 overrides==7.7.0
     # via jupyter-server
-packaging==24.1
+packaging==24.2
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -635,12 +644,12 @@ propcache==0.2.0
     # via
     #   -r requirements.txt
     #   yarl
-proto-plus==1.24.0
+proto-plus==1.25.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==5.28.2
+protobuf==5.28.3
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -649,7 +658,7 @@ protobuf==5.28.2
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-psutil==6.0.0
+psutil==6.1.0
     # via
     #   -r requirements.txt
     #   ipykernel
@@ -697,13 +706,14 @@ pydantic-core==2.23.4
     # via
     #   -r requirements.txt
     #   pydantic
-pydantic-settings==2.5.2
+pydantic-settings==2.6.1
     # via
     #   -r requirements.txt
     #   langchain-community
 pygments==2.18.0
     # via
     #   -r requirements.txt
+    #   icecream
     #   ipython
     #   jupyter-console
     #   mkdocs-material
@@ -720,14 +730,14 @@ pylint-django==2.6.1
     # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
-pymdown-extensions==10.11.2
+pymdown-extensions==10.12
     # via
     #   -r requirements.dev.in
     #   mkdocs-material
     #   mkdocstrings
 pyopenssl==24.2.1
     # via -r requirements.txt
-pyparsing==3.1.4
+pyparsing==3.2.0
     # via
     #   -r requirements.txt
     #   httplib2
@@ -739,7 +749,7 @@ pytest==8.3.3
     #   allure-pytest
     #   pytest-cov
     #   pytest-django
-pytest-cov==5.0.0
+pytest-cov==6.0.0
     # via -r requirements.dev.in
 pytest-django==4.9.0
     # via -r requirements.dev.in
@@ -785,7 +795,7 @@ referencing==0.35.1
     #   jsonschema
     #   jsonschema-specifications
     #   jupyter-events
-regex==2024.9.11
+regex==2024.11.6
     # via
     #   -r requirements.txt
     #   mkdocs-material
@@ -818,11 +828,11 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
-rich==13.9.2
+rich==13.9.4
     # via
     #   -r requirements.txt
     #   typer
-rpds-py==0.20.0
+rpds-py==0.21.0
     # via
     #   jsonschema
     #   referencing
@@ -830,13 +840,13 @@ rsa==4.9
     # via
     #   -r requirements.txt
     #   google-auth
-selenium==4.25.0
+selenium==4.26.1
     # via -r requirements.dev.in
 send2trash==1.8.3
     # via
     #   jupyter-server
     #   notebook
-setuptools==75.1.0
+setuptools==75.3.0
     # via
     #   -r requirements.txt
     #   fasttext
@@ -851,7 +861,6 @@ six==1.16.0
     # via
     #   -r requirements.txt
     #   asttokens
-    #   bleach
     #   ebooklib
     #   python-dateutil
     #   rfc3339-validator
@@ -903,7 +912,7 @@ srsly==2.4.8
     #   weasel
 stack-data==0.6.3
     # via ipython
-tenacity==8.5.0
+tenacity==9.0.0
     # via
     #   -r requirements.txt
     #   langchain
@@ -922,12 +931,11 @@ tiktoken==0.8.0
     # via
     #   -r requirements.txt
     #   langchain-openai
-tinycss2==1.3.0
+tinycss2==1.4.0
     # via nbconvert
-tokenizers==0.20.1
+tokenizers==0.20.3
     # via
     #   -r requirements.txt
-    #   anthropic
     #   langchain-mistralai
 tomlkit==0.13.2
     # via pylint
@@ -938,7 +946,7 @@ tornado==6.4.1
     #   jupyter-server
     #   notebook
     #   terminado
-tqdm==4.66.5
+tqdm==4.67.0
     # via
     #   -r requirements.txt
     #   google-generativeai
@@ -964,13 +972,13 @@ traitlets==5.9.0
     #   notebook
 transliterate==1.10.2
     # via -r requirements.txt
-trio==0.26.2
+trio==0.27.0
     # via
     #   selenium
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-typer==0.12.5
+typer==0.13.0
     # via
     #   -r requirements.txt
     #   spacy
@@ -1010,7 +1018,7 @@ urllib3==2.2.3
     #   -r requirements.txt
     #   requests
     #   selenium
-virtualenv==20.26.6
+virtualenv==20.27.1
     # via pre-commit
 wasabi==1.1.3
     # via
@@ -1018,7 +1026,7 @@ wasabi==1.1.3
     #   spacy
     #   thinc
     #   weasel
-watchdog==5.0.3
+watchdog==6.0.0
     # via mkdocs
 wcmatch==10.0
     # via mkdocs-awesome-pages-plugin
@@ -1038,7 +1046,7 @@ websocket-client==1.8.0
     # via
     #   jupyter-server
     #   selenium
-werkzeug==3.0.4
+werkzeug==3.1.3
     # via -r requirements.txt
 wrapt==1.16.0
     # via
@@ -1046,7 +1054,7 @@ wrapt==1.16.0
     #   smart-open
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.15.0
+yarl==1.17.1
     # via
     #   -r requirements.txt
     #   aiohttp
