--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,17 @@ aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.36.0
+anthropic==0.39.0
     # via langchain-anthropic
-anyio==4.6.0
+anyio==4.6.2.post1
     # via
     #   anthropic
     #   httpx
     #   openai
 asgiref==3.8.1
-    # via django
+    # via
+    #   django
+    #   django-allauth
 attrs==24.2.0
     # via aiohttp
 beautifulsoup4==4.12.3
@@ -27,7 +29,7 @@ beautifulsoup4==4.12.3
     #   deep-translator
 blis==0.7.11
     # via thinc
-cached-property==1.5.2
+cached-property==2.0.1
     # via genanki
 cachetools==5.5.0
     # via google-auth
@@ -53,13 +55,13 @@ click==8.1.7
     # via
     #   nltk
     #   typer
-cloudpathlib==0.19.0
+cloudpathlib==0.20.0
     # via weasel
 confection==0.1.5
     # via
     #   thinc
     #   weasel
-cryptography==43.0.1
+cryptography==43.0.3
     # via pyopenssl
 cymem==2.0.8
     # via
@@ -76,12 +78,12 @@ distro==1.9.0
     # via
     #   anthropic
     #   openai
-django==5.1.2
+django==5.1.3
     # via
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.0.2
+django-allauth==65.2.0
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
@@ -93,26 +95,26 @@ fasttext==0.9.3
     # via -r requirements.in
 filelock==3.16.1
     # via huggingface-hub
-frozendict==2.4.5
+frozendict==2.4.6
     # via genanki
-frozenlist==1.4.1
+frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2024.9.0
+fsspec==2024.10.0
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
 google-ai-generativelanguage==0.6.10
     # via google-generativeai
-google-api-core==2.21.0
+google-api-core==2.22.0
     # via
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.149.0
+google-api-python-client==2.151.0
     # via google-generativeai
-google-auth==2.35.0
+google-auth==2.36.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -127,11 +129,11 @@ googleapis-common-protos==1.65.0
     # via
     #   google-api-core
     #   grpcio-status
-grpcio==1.66.2
+grpcio==1.67.1
     # via
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.66.2
+grpcio-status==1.67.1
     # via google-api-core
 h11==0.14.0
     # via httpcore
@@ -149,8 +151,10 @@ httpx==0.27.2
     #   ollama
     #   openai
 httpx-sse==0.4.0
-    # via langchain-mistralai
-huggingface-hub==0.25.2
+    # via
+    #   langchain-community
+    #   langchain-mistralai
+huggingface-hub==0.26.2
     # via tokenizers
 idna==3.10
     # via
@@ -160,7 +164,7 @@ idna==3.10
     #   yarl
 jinja2==3.1.4
     # via spacy
-jiter==0.6.1
+jiter==0.7.0
     # via
     #   anthropic
     #   openai
@@ -170,15 +174,15 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.3
+langchain==0.3.7
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.2.3
+langchain-anthropic==0.2.4
     # via -r requirements.in
-langchain-community==0.3.2
+langchain-community==0.3.5
     # via -r requirements.in
-langchain-core==0.3.10
+langchain-core==0.3.15
     # via
     #   -r requirements.in
     #   langchain
@@ -188,17 +192,17 @@ langchain-core==0.3.10
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.1
+langchain-google-genai==2.0.4
     # via -r requirements.in
-langchain-mistralai==0.2.0
+langchain-mistralai==0.2.1
     # via -r requirements.in
-langchain-openai==0.2.2
+langchain-openai==0.2.6
     # via -r requirements.in
-langchain-text-splitters==0.3.0
+langchain-text-splitters==0.3.2
     # via langchain
 langcodes==3.4.1
     # via spacy
-langsmith==0.1.134
+langsmith==0.1.142
     # via
     #   langchain
     #   langchain-community
@@ -207,15 +211,15 @@ language-data==1.2.0
     # via langcodes
 lxml==5.3.0
     # via ebooklib
-marisa-trie==1.2.0
+marisa-trie==1.2.1
     # via language-data
 markdown-it-py==3.0.0
     # via rich
-markupsafe==3.0.1
+markupsafe==3.0.2
     # via
     #   jinja2
     #   werkzeug
-marshmallow==3.22.0
+marshmallow==3.23.1
     # via dataclasses-json
 mdurl==0.1.2
     # via markdown-it-py
@@ -242,13 +246,13 @@ numpy==1.26.4
     #   thinc
 ollama==0.3.3
     # via -r requirements.in
-openai==1.51.2
+openai==1.54.3
     # via
     #   -r requirements.in
     #   langchain-openai
-orjson==3.10.7
+orjson==3.10.11
     # via langsmith
-packaging==24.1
+packaging==24.2
     # via
     #   huggingface-hub
     #   langchain-core
@@ -262,11 +266,11 @@ preshed==3.0.9
     #   thinc
 propcache==0.2.0
     # via yarl
-proto-plus==1.24.0
+proto-plus==1.25.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==5.28.2
+protobuf==5.28.3
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -274,7 +278,7 @@ protobuf==5.28.2
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-psutil==6.0.0
+psutil==6.1.0
     # via -r requirements.in
 pyasn1==0.6.1
     # via
@@ -305,7 +309,7 @@ pydantic==2.9.2
     #   weasel
 pydantic-core==2.23.4
     # via pydantic
-pydantic-settings==2.5.2
+pydantic-settings==2.6.1
     # via langchain-community
 pygments==2.18.0
     # via rich
@@ -313,7 +317,7 @@ pyjwt==2.9.0
     # via -r requirements.in
 pyopenssl==24.2.1
     # via -r requirements.in
-pyparsing==3.1.4
+pyparsing==3.2.0
     # via httplib2
 python-dotenv==1.0.1
     # via pydantic-settings
@@ -324,7 +328,7 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
-regex==2024.9.11
+regex==2024.11.6
     # via
     #   nltk
     #   tiktoken
@@ -342,11 +346,11 @@ requests==2.32.3
     #   weasel
 requests-toolbelt==1.0.0
     # via langsmith
-rich==13.9.2
+rich==13.9.4
     # via typer
 rsa==4.9
     # via google-auth
-setuptools==75.1.0
+setuptools==75.3.0
     # via
     #   fasttext
     #   marisa-trie
@@ -386,7 +390,7 @@ srsly==2.4.8
     #   spacy
     #   thinc
     #   weasel
-tenacity==8.5.0
+tenacity==9.0.0
     # via
     #   langchain
     #   langchain-community
@@ -395,11 +399,9 @@ thinc==8.2.5
     # via spacy
 tiktoken==0.8.0
     # via langchain-openai
-tokenizers==0.20.1
-    # via
-    #   anthropic
-    #   langchain-mistralai
-tqdm==4.66.5
+tokenizers==0.20.3
+    # via langchain-mistralai
+tqdm==4.67.0
     # via
     #   google-generativeai
     #   huggingface-hub
@@ -408,7 +410,7 @@ tqdm==4.66.5
     #   spacy
 transliterate==1.10.2
     # via -r requirements.in
-typer==0.12.5
+typer==0.13.0
     # via
     #   spacy
     #   weasel
@@ -439,9 +441,9 @@ wasabi==1.1.3
     #   weasel
 weasel==0.4.1
     # via spacy
-werkzeug==3.0.4
+werkzeug==3.1.3
     # via -r requirements.in
 wrapt==1.16.0
     # via smart-open
-yarl==1.15.0
+yarl==1.17.1
     # via aiohttp
