--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -68,7 +68,7 @@ babel==2.17.0
     #   mkdocs-material
 backrefs==5.8
     # via mkdocs-material
-beautifulsoup4==4.13.3
+beautifulsoup4==4.13.4
     # via
     #   -r requirements.txt
     #   deep-translator
@@ -172,7 +172,7 @@ dateparser==1.2.1
     # via
     #   -r requirements.txt
     #   htmldate
-debugpy==1.8.13
+debugpy==1.8.14
     # via ipykernel
 decorator==5.2.1
     # via ipython
@@ -180,7 +180,7 @@ deep-translator==1.11.4
     # via -r requirements.txt
 defusedxml==0.7.1
     # via nbconvert
-dill==0.3.9
+dill==0.4.0
     # via pylint
 distlib==0.3.9
     # via virtualenv
@@ -199,7 +199,7 @@ django-allauth==65.7.0
     # via -r requirements.txt
 django-debug-toolbar==5.1.0
     # via -r requirements.dev.in
-django-extensions==4.0
+django-extensions==4.1
     # via -r requirements.txt
 django-widget-tweaks==1.5.0
     # via -r requirements.txt
@@ -234,7 +234,7 @@ frozendict==2.4.6
     # via
     #   -r requirements.txt
     #   genanki
-frozenlist==1.5.0
+frozenlist==1.6.0
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -255,12 +255,12 @@ google-api-core==2.24.2
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
-google-auth==2.38.0
+google-auth==2.39.0
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
-googleapis-common-protos==1.69.2
+googleapis-common-protos==1.70.0
     # via
     #   -r requirements.txt
     #   google-api-core
@@ -295,7 +295,7 @@ htmldate==1.9.3
     # via
     #   -r requirements.txt
     #   trafilatura
-httpcore==1.0.7
+httpcore==1.0.8
     # via
     #   -r requirements.txt
     #   httpx
@@ -323,7 +323,7 @@ hyperframe==6.1.0
     #   h2
 icecream==2.1.3
     # via -r requirements.dev.in
-identify==2.6.9
+identify==2.6.10
     # via pre-commit
 idna==3.10
     # via
@@ -428,11 +428,11 @@ langchain==0.3.23
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.3.10
+langchain-anthropic==0.3.12
     # via -r requirements.txt
 langchain-community==0.3.21
     # via -r requirements.txt
-langchain-core==0.3.51
+langchain-core==0.3.54
     # via
     #   -r requirements.txt
     #   langchain
@@ -442,11 +442,11 @@ langchain-core==0.3.51
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.2
+langchain-google-genai==2.1.3
     # via -r requirements.txt
 langchain-mistralai==0.2.10
     # via -r requirements.txt
-langchain-openai==0.3.12
+langchain-openai==0.3.14
     # via -r requirements.txt
 langchain-text-splitters==0.3.8
     # via
@@ -456,7 +456,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.3.26
+langsmith==0.3.32
     # via
     #   -r requirements.txt
     #   langchain
@@ -474,7 +474,7 @@ lxml==5.3.2
     #   justext
     #   lxml-html-clean
     #   trafilatura
-lxml-html-clean==0.4.1
+lxml-html-clean==0.4.2
     # via
     #   -r requirements.txt
     #   lxml
@@ -482,7 +482,7 @@ marisa-trie==1.2.1
     # via
     #   -r requirements.txt
     #   language-data
-markdown==3.7
+markdown==3.8
     # via
     #   mkdocs
     #   mkdocs-autorefs
@@ -536,7 +536,7 @@ mkdocs-awesome-pages-plugin==2.10.1
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.6.11
+mkdocs-material==9.6.12
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
@@ -546,7 +546,7 @@ mkdocstrings==0.29.1
     #   mkdocstrings-python
 mkdocstrings-python==1.16.10
     # via mkdocstrings
-multidict==6.3.2
+multidict==6.4.3
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -601,9 +601,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.7
+ollama==0.4.8
     # via -r requirements.txt
-openai==1.71.0
+openai==1.75.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -664,7 +664,7 @@ prometheus-client==0.21.1
     # via
     #   jupyter-server
     #   notebook
-prompt-toolkit==3.0.50
+prompt-toolkit==3.0.51
     # via
     #   ipython
     #   jupyter-console
@@ -713,7 +713,7 @@ pycparser==2.22
     # via
     #   -r requirements.txt
     #   cffi
-pydantic==2.11.2
+pydantic==2.11.3
     # via
     #   -r requirements.txt
     #   anthropic
@@ -734,7 +734,7 @@ pydantic-core==2.33.1
     # via
     #   -r requirements.txt
     #   pydantic
-pydantic-settings==2.8.1
+pydantic-settings==2.9.1
     # via
     #   -r requirements.txt
     #   langchain-community
@@ -844,10 +844,13 @@ requests==2.32.3
     #   langchain-community
     #   langsmith
     #   mkdocs-material
+    #   requests-mock
     #   requests-toolbelt
     #   spacy
     #   tiktoken
     #   weasel
+requests-mock==1.12.1
+    # via -r requirements.dev.in
 requests-toolbelt==1.0.0
     # via
     #   -r requirements.txt
@@ -868,7 +871,7 @@ rpds-py==0.24.0
     # via
     #   jsonschema
     #   referencing
-rsa==4.9
+rsa==4.9.1
     # via
     #   -r requirements.txt
     #   google-auth
@@ -1019,7 +1022,7 @@ typer==0.15.2
     #   weasel
 types-python-dateutil==2.9.0.20241206
     # via arrow
-typing-extensions==4.13.1
+typing-extensions==4.13.2
     # via
     #   -r requirements.txt
     #   anthropic
@@ -1046,6 +1049,7 @@ typing-inspection==0.4.0
     # via
     #   -r requirements.txt
     #   pydantic
+    #   pydantic-settings
 tzdata==2025.2
     # via faker
 tzlocal==5.3.1
@@ -1056,7 +1060,7 @@ unidecode==1.3.8
     # via -r requirements.txt
 uri-template==1.3.0
     # via jsonschema
-urllib3==2.3.0
+urllib3==2.4.0
     # via
     #   -r requirements.txt
     #   courlan
@@ -1100,7 +1104,7 @@ wrapt==1.17.2
     #   smart-open
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.19.0
+yarl==1.20.0
     # via
     #   -r requirements.txt
     #   aiohttp
