--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ attrs==25.3.0
     # via aiohttp
 babel==2.17.0
     # via courlan
-beautifulsoup4==4.13.3
-    # via deep-translator
+beautifulsoup4==4.13.4
+    # via
+    #   -r requirements.in
+    #   deep-translator
 blis==1.2.1
     # via thinc
 cached-property==2.0.1
@@ -89,7 +91,7 @@ django==5.2
     #   django-extensions
 django-allauth==65.7.0
     # via -r requirements.in
-django-extensions==4.0
+django-extensions==4.1
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
@@ -103,7 +105,7 @@ filetype==1.2.0
     # via langchain-google-genai
 frozendict==2.4.6
     # via genanki
-frozenlist==1.5.0
+frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
@@ -115,11 +117,11 @@ google-ai-generativelanguage==0.6.17
     # via langchain-google-genai
 google-api-core==2.24.2
     # via google-ai-generativelanguage
-google-auth==2.38.0
+google-auth==2.39.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-googleapis-common-protos==1.69.2
+googleapis-common-protos==1.70.0
     # via
     #   google-api-core
     #   grpcio-status
@@ -139,7 +141,7 @@ hpack==4.1.0
     # via h2
 htmldate==1.9.3
     # via trafilatura
-httpcore==1.0.7
+httpcore==1.0.8
     # via httpx
 httpx==0.28.1
     # via
@@ -181,11 +183,11 @@ langchain==0.3.23
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.3.10
+langchain-anthropic==0.3.12
     # via -r requirements.in
 langchain-community==0.3.21
     # via -r requirements.in
-langchain-core==0.3.51
+langchain-core==0.3.54
     # via
     #   -r requirements.in
     #   langchain
@@ -195,17 +197,17 @@ langchain-core==0.3.51
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.2
+langchain-google-genai==2.1.3
     # via -r requirements.in
 langchain-mistralai==0.2.10
     # via -r requirements.in
-langchain-openai==0.3.12
+langchain-openai==0.3.14
     # via -r requirements.in
 langchain-text-splitters==0.3.8
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.3.26
+langsmith==0.3.32
     # via
     #   langchain
     #   langchain-community
@@ -220,7 +222,7 @@ lxml==5.3.2
     #   justext
     #   lxml-html-clean
     #   trafilatura
-lxml-html-clean==0.4.1
+lxml-html-clean==0.4.2
     # via
     #   -r requirements.in
     #   lxml
@@ -236,7 +238,7 @@ marshmallow==3.26.1
     # via dataclasses-json
 mdurl==0.1.2
     # via markdown-it-py
-multidict==6.3.2
+multidict==6.4.3
     # via
     #   aiohttp
     #   yarl
@@ -257,9 +259,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.7
+ollama==0.4.8
     # via -r requirements.in
-openai==1.71.0
+openai==1.75.0
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -305,7 +307,7 @@ pybind11==2.13.6
     # via fasttext
 pycparser==2.22
     # via cffi
-pydantic==2.11.2
+pydantic==2.11.3
     # via
     #   -r requirements.in
     #   anthropic
@@ -324,7 +326,7 @@ pydantic==2.11.2
     #   weasel
 pydantic-core==2.33.1
     # via pydantic
-pydantic-settings==2.8.1
+pydantic-settings==2.9.1
     # via langchain-community
 pygments==2.19.1
     # via rich
@@ -368,7 +370,7 @@ requests-toolbelt==1.0.0
     # via langsmith
 rich==14.0.0
     # via typer
-rsa==4.9
+rsa==4.9.1
     # via google-auth
 setuptools==78.1.0
     # via
@@ -436,7 +438,7 @@ typer==0.15.2
     # via
     #   spacy
     #   weasel
-typing-extensions==4.13.1
+typing-extensions==4.13.2
     # via
     #   anthropic
     #   anyio
@@ -454,12 +456,14 @@ typing-extensions==4.13.1
 typing-inspect==0.9.0
     # via dataclasses-json
 typing-inspection==0.4.0
-    # via pydantic
+    # via
+    #   pydantic
+    #   pydantic-settings
 tzlocal==5.3.1
     # via dateparser
 unidecode==1.3.8
     # via -r requirements.in
-urllib3==2.3.0
+urllib3==2.4.0
     # via
     #   courlan
     #   htmldate
@@ -476,7 +480,7 @@ werkzeug==3.1.3
     # via -r requirements.in
 wrapt==1.17.2
     # via smart-open
-yarl==1.19.0
+yarl==1.20.0
     # via aiohttp
 zstandard==0.23.0
     # via langsmith
