--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@ aiohappyeyeballs==2.6.1
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.11.18
+aiohttp==3.12.4
     # via
     #   -r requirements.txt
     #   langchain-community
@@ -20,7 +20,7 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.52.0
+anthropic==0.52.1
     # via
     #   -r requirements.txt
     #   langchain-anthropic
@@ -148,13 +148,13 @@ courlan==1.3.2
     # via
     #   -r requirements.txt
     #   trafilatura
-coverage==7.8.1
+coverage==7.8.2
     # via
     #   coveralls
     #   pytest-cov
 coveralls==4.0.1
     # via -r requirements.dev.in
-cryptography==45.0.2
+cryptography==45.0.3
     # via
     #   -r requirements.txt
     #   pyopenssl
@@ -239,7 +239,7 @@ frozenlist==1.6.0
     #   -r requirements.txt
     #   aiohttp
     #   aiosignal
-fsspec==2025.5.0
+fsspec==2025.5.1
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -287,6 +287,10 @@ h2==4.2.0
     # via
     #   -r requirements.txt
     #   httpx
+hf-xet==1.1.2
+    # via
+    #   -r requirements.txt
+    #   huggingface-hub
 hpack==4.1.0
     # via
     #   -r requirements.txt
@@ -313,7 +317,7 @@ httpx-sse==0.4.0
     #   -r requirements.txt
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.31.4
+huggingface-hub==0.32.2
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -323,7 +327,7 @@ hyperframe==6.1.0
     #   h2
 icecream==2.1.3
     # via -r requirements.dev.in
-identify==2.6.10
+identify==2.6.12
     # via pre-commit
 idna==3.10
     # via
@@ -372,7 +376,7 @@ jiter==0.10.0
     #   -r requirements.txt
     #   anthropic
     #   openai
-joblib==1.5.0
+joblib==1.5.1
     # via
     #   -r requirements.txt
     #   nltk
@@ -385,7 +389,7 @@ jsonpointer==3.0.0
     #   -r requirements.txt
     #   jsonpatch
     #   jsonschema
-jsonschema==4.23.0
+jsonschema==4.24.0
     # via
     #   jupyter-events
     #   nbformat
@@ -428,11 +432,11 @@ langchain==0.3.25
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.3.13
+langchain-anthropic==0.3.14
     # via -r requirements.txt
 langchain-community==0.3.24
     # via -r requirements.txt
-langchain-core==0.3.61
+langchain-core==0.3.63
     # via
     #   -r requirements.txt
     #   langchain
@@ -442,7 +446,7 @@ langchain-core==0.3.61
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.4
+langchain-google-genai==2.1.5
     # via -r requirements.txt
 langchain-mistralai==0.2.10
     # via -r requirements.txt
@@ -456,7 +460,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.3.42
+langsmith==0.3.43
     # via
     #   -r requirements.txt
     #   langchain
@@ -545,7 +549,7 @@ mkdocstrings==0.29.1
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.16.10
+mkdocstrings-python==1.16.11
     # via mkdocstrings
 multidict==6.4.4
     # via
@@ -558,7 +562,7 @@ murmurhash==1.0.13
     #   preshed
     #   spacy
     #   thinc
-mypy==1.15.0
+mypy==1.16.0
     # via -r requirements.dev.in
 mypy-extensions==1.1.0
     # via
@@ -602,9 +606,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.8
+ollama==0.5.0
     # via -r requirements.txt
-openai==1.82.0
+openai==1.82.1
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -634,7 +638,7 @@ packaging==24.2
     #   spacy
     #   thinc
     #   weasel
-pagesmith==1.6.0
+pagesmith==2.0.0
     # via -r requirements.txt
 paginate==0.5.7
     # via mkdocs-material
@@ -643,7 +647,9 @@ pandocfilters==1.5.1
 parso==0.8.4
     # via jedi
 pathspec==0.12.1
-    # via mkdocs
+    # via
+    #   mkdocs
+    #   mypy
 pexpect==4.9.0
     # via ipython
 platformdirs==4.3.8
@@ -658,7 +664,7 @@ pluggy==1.6.0
     #   pytest
 pre-commit==4.2.0
     # via -r requirements.dev.in
-preshed==3.0.9
+preshed==3.0.10
     # via
     #   -r requirements.txt
     #   spacy
@@ -681,7 +687,7 @@ proto-plus==1.26.1
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==6.31.0
+protobuf==6.31.1
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -781,7 +787,7 @@ pytest-cov==6.1.1
     # via -r requirements.dev.in
 pytest-django==4.11.1
     # via -r requirements.dev.in
-pytest-xdist==3.6.1
+pytest-xdist==3.7.0
     # via -r requirements.dev.in
 python-dateutil==2.9.0.post0
     # via
@@ -884,7 +890,7 @@ send2trash==1.8.3
     # via
     #   jupyter-server
     #   notebook
-setuptools==80.8.0
+setuptools==80.9.0
     # via
     #   -r requirements.txt
     #   fasttext
@@ -919,7 +925,7 @@ soupsieve==2.7
     # via
     #   -r requirements.txt
     #   beautifulsoup4
-spacy==3.8.6
+spacy==3.8.7
     # via -r requirements.txt
 spacy-legacy==3.0.12
     # via
@@ -1018,7 +1024,7 @@ trio==0.30.0
     #   trio-websocket
 trio-websocket==0.12.2
     # via selenium
-typer==0.15.3
+typer==0.16.0
     # via
     #   -r requirements.txt
     #   spacy
