--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.18
+aiohttp==3.12.4
     # via langchain-community
 aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.52.0
+anthropic==0.52.1
     # via langchain-anthropic
 anyio==4.9.0
     # via
@@ -67,7 +67,7 @@ confection==0.1.5
     #   weasel
 courlan==1.3.2
     # via trafilatura
-cryptography==45.0.2
+cryptography==45.0.3
     # via pyopenssl
 cymem==2.0.11
     # via
@@ -109,7 +109,7 @@ frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.5.0
+fsspec==2025.5.1
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
@@ -137,6 +137,8 @@ h11==0.16.0
     # via httpcore
 h2==4.2.0
     # via httpx
+hf-xet==1.1.2
+    # via huggingface-hub
 hpack==4.1.0
     # via h2
 htmldate==1.9.3
@@ -155,7 +157,7 @@ httpx-sse==0.4.0
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.31.4
+huggingface-hub==0.32.2
     # via tokenizers
 hyperframe==6.1.0
     # via h2
@@ -171,7 +173,7 @@ jiter==0.10.0
     # via
     #   anthropic
     #   openai
-joblib==1.5.0
+joblib==1.5.1
     # via nltk
 jsonpatch==1.33
     # via langchain-core
@@ -183,11 +185,11 @@ langchain==0.3.25
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.3.13
+langchain-anthropic==0.3.14
     # via -r requirements.in
 langchain-community==0.3.24
     # via -r requirements.in
-langchain-core==0.3.61
+langchain-core==0.3.63
     # via
     #   -r requirements.in
     #   langchain
@@ -197,7 +199,7 @@ langchain-core==0.3.61
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.4
+langchain-google-genai==2.1.5
     # via -r requirements.in
 langchain-mistralai==0.2.10
     # via -r requirements.in
@@ -207,7 +209,7 @@ langchain-text-splitters==0.3.8
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.3.42
+langsmith==0.3.43
     # via
     #   langchain
     #   langchain-community
@@ -260,9 +262,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.8
+ollama==0.5.0
     # via -r requirements.in
-openai==1.82.0
+openai==1.82.1
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -277,9 +279,9 @@ packaging==24.2
     #   spacy
     #   thinc
     #   weasel
-pagesmith==1.6.0
+pagesmith==2.0.0
     # via -r requirements.in
-preshed==3.0.9
+preshed==3.0.10
     # via
     #   spacy
     #   thinc
@@ -291,7 +293,7 @@ proto-plus==1.26.1
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==6.31.0
+protobuf==6.31.1
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -375,7 +377,7 @@ rich==14.0.0
     # via typer
 rsa==4.9.1
     # via google-auth
-setuptools==80.8.0
+setuptools==80.9.0
     # via
     #   fasttext
     #   marisa-trie
@@ -397,7 +399,7 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.7
     # via beautifulsoup4
-spacy==3.8.6
+spacy==3.8.7
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
@@ -437,7 +439,7 @@ trafilatura==2.0.0
     # via -r requirements.in
 transliterate==1.10.2
     # via -r requirements.in
-typer==0.15.3
+typer==0.16.0
     # via
     #   spacy
     #   weasel
