--- a/lexiflux/resources/chat_models.yaml
+++ b/lexiflux/resources/chat_models.yaml
@@ -1,3 +1,4 @@
+# OpenAI Models
 gpt-4o-mini:
   title: OpenAI GPT-4o mini
   model: ChatOpenAI
@@ -8,11 +9,22 @@ gpt-4o:
   model: ChatOpenAI
   suffix: 🔗 4o
 
-o1-mini-2024-09-12:
+gpt-4-turbo:
+  title: OpenAI GPT-4 Turbo
+  model: ChatOpenAI
+  suffix: 🔗 4T
+
+o1-preview:
+  title: OpenAI o1 Preview
+  model: ChatOpenAI
+  suffix: 🔗 o1
+
+o1-mini:
   title: OpenAI o1 mini
   model: ChatOpenAI
   suffix: 🔗 o1°
 
+# Claude Models
 claude-3-5-sonnet-20241022:
   title: Claude 3.5 Sonnet
   model: ChatAnthropic
@@ -23,32 +35,43 @@ claude-3-5-haiku-20241022:
   model: ChatAnthropic
   suffix: 💡3.5°
 
-claude-3-haiku-20240307:
-  title: Claude 3 Haiku
+claude-3-opus-20240229:
+  title: Claude 3 Opus
   model: ChatAnthropic
-  suffix: 💡3°
+  suffix: 💡3♦
 
+claude-3-sonnet-20240229:
+  title: Claude 3 Sonnet
+  model: ChatAnthropic
+  suffix: 💡3
+
+# Other Models
 llama3.2:
   title: LLAMA 3.2
   model: Ollama
   suffix: 🦙3.2
 
-mistral-medium:
+mistral-large-latest:
+  title: Mistral Large
+  model: ChatMistralAI
+  suffix: 🌪️L
+
+mistral-medium-latest:
   title: Mistral Medium
   model: ChatMistralAI
-  suffix: 🌪️
+  suffix: 🌪️M
 
-gemini-2.0-flash:
-  title: Gemini 2.5 Flash
+gemini-2.0-flash-exp:
+  title: Gemini 2.0 Flash Experimental
   model: ChatGoogle
-  suffix: 🌀2.0f
+  suffix: 🌀2.0fe
 
-gemini-2.5-flash-preview-04-17:
-  title: Gemini 2.5 Flash Preview April
+gemini-1.5-pro-latest:
+  title: Gemini 1.5 Pro
   model: ChatGoogle
-  suffix: 🌀2.5fp
+  suffix: 🌀1.5p
 
-gemini-2.5-pro-preview-03-25:
-  title: Gemini 2.5 Pro Preview March
+gemini-1.5-flash-latest:
+  title: Gemini 1.5 Flash
   model: ChatGoogle
-  suffix: 🌀2.5pp
+  suffix: 🌀1.5f
